@@ -1091,7 +1091,7 @@ sub pull_reports {
                                                                                 $ref->{PROJNAME} = $proj->{PROJNAME};
                                                                                 $ref->{PROJ} = $proj->{PROJ};
                                                                                 $ref->{PROPROJURL} = $vars->{PROJURL};
-                                                                                if($str =~ /<td title=.*><a href='(.*)'>(.*)<\/a><\/td><td title=(.*)>(.*)<\/td><td.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td>(.*)<\/td><td title=.*>(.*)<\/td><td.*><a href="(.*)">.*<\/a><\/td><td style=.*>(<a.*)<\/td><td>(.*)<\/td>/) {
+                                                                                if($str =~ /<td title=.*><a href='(.*)'>(.*)<\/a><\/td><td title=(.*)>(.*)<\/td><td.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td.*><a href="(.*)">.*<\/a><\/td><td style=.*>(<a.*)<\/td><td>(.*)<\/td>/) {
 											$ref->{LS_REF_LINK} = $1;
                                                                                         $ref->{LS_REF} = $2;
                                                                                         $ref->{LS_CNS_COMP} = $3;
@@ -1103,12 +1103,13 @@ sub pull_reports {
                                                                                         $ref->{LS_CNS_3_N} = $9;
                                                                                         $ref->{LS_CNS_SNP} = $10;
                                                                                         $ref->{LS_CNS_INDEL} = $11;
-											$ref->{LS_CNS_LOG} = $vars->{RUNHOST}."/".$12;
+                                                                                        $ref->{LS_CNS_LINEAGE} = $12;
+											$ref->{LS_CNS_LOG} = $vars->{RUNHOST}."/".$13;
 											#$13 LS_CNS_FASTA_DOWNLOAD
-                                                                                        $ref->{LS_CNS_READY_TO_SUBMIT} = $14;
+                                                                                        $ref->{LS_CNS_READY_TO_SUBMIT} = $15;
 											$ref->{LS_CNS_READY_TO_SUBMIT} =~ s/edge-consensus-ok-to-submit//;
 
-										}elsif($str =~ /<td title=.*>(.*)<\/td><td title=(.*)>(.*)<\/td><td.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td>(.*)<\/td><td title=.*>(.*)<\/td><td.*><a href="(.*)">.*<\/a><\/td><td style=.*>(<a.*)<\/td><td>(.*)<\/td>/) {
+										}elsif($str =~ /<td title=.*>(.*)<\/td><td title=(.*)>(.*)<\/td><td.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td>(.*)<\/td><td title=.*>(.*)<\/td><td title=.*>(.*)<\/td><td.*><a href="(.*)">.*<\/a><\/td><td style=.*>(<a.*)<\/td><td>(.*)<\/td>/) {
                                                                                         $ref->{LS_REF_LINK} = '#';
                                                                                         $ref->{LS_REF} = $1;
                                                                                         $ref->{LS_CNS_COMP} = $2;
@@ -1120,9 +1121,10 @@ sub pull_reports {
                                                                                         $ref->{LS_CNS_3_N} = $8;
                                                                                         $ref->{LS_CNS_SNP} = $9;
                                                                                         $ref->{LS_CNS_INDEL} = $10;
-											$ref->{LS_CNS_LOG} = $vars->{RUNHOST}."/".$11;
+                                                                                        $ref->{LS_CNS_LINEAGE} = $11;
+											$ref->{LS_CNS_LOG} = $vars->{RUNHOST}."/".$12;
 											#$12 LS_CNS_FASTA_DOWNLOAD
-                                                                                        $ref->{LS_CNS_READY_TO_SUBMIT} = $13;
+                                                                                        $ref->{LS_CNS_READY_TO_SUBMIT} = $14;
 											$ref->{LS_CNS_READY_TO_SUBMIT} =~ s/edge-consensus-ok-to-submit//;
 
                                                                                 }
@@ -2708,7 +2710,7 @@ sub create_ref_reads_var_csv {
 }
 sub create_ref_reads_cns_csv {
 	my $file_name = shift;
-	my $content = "Project/Run Name,Reference,Consensus Length,Consensus GC%,Gap,Ns/ns,5' Ns/ns,3' Ns/ns,SNPs,INDELs,Ready to Submit\n";
+	my $content = "Project/Run Name,Reference,Consensus Length,Consensus GC%,Gap,Ns/ns,5' Ns/ns,3' Ns/ns,SNPs,INDELs,Lineage,Ready to Submit\n";
 	my $celltext;
 	foreach my $project (@projects) {
 		foreach my $ref (@{$reports_map{$project}{'ref-mappedreads-cns'}}) {
@@ -2740,6 +2742,9 @@ sub create_ref_reads_cns_csv {
 			$content .= "\"$celltext\"".",";
 
 			($celltext = $ref->{LS_CNS_INDEL}) =~ s/,|\s+|bp//g;
+			$content .= "\"$celltext\"".",";
+
+			($celltext = $ref->{LS_CNS_LINEAGE}) =~ s/,|\s+|bp//g;
 			$content .= "\"$celltext\"".",";
 
 			($celltext = $ref->{LS_CNS_READY_TO_SUBMIT}) =~ s/,|\s+|bp//g;
@@ -2837,6 +2842,7 @@ sub create_ref_contigs_refs_csv {
 
 			($celltext = $ref->{LS_REF_INDELS}) =~ s/,|\s+|bp//g;
 			$content .= "\"$celltext\""."\n";
+
 		}
 	}
 	&write_file($file_name,$content);
