@@ -580,6 +580,7 @@
 									<th data-priority='8'>3' Ns/ns</th>
 									<th data-priority='9'>SNPs</th>
 									<th data-priority='9'>INDELs</th>
+									<th data-priority='9'>LINEAGE</th>
 									<th data-priority='9' class='ui-table-cell-hidden'>Change Log</th>
 									<th data-priority='9'>Ready to Submit</th>
 								</tr>
@@ -598,6 +599,7 @@
 											<td><TMPL_VAR NAME=LS_CNS_3_N DEFAULT=-></td> 
 											<td><TMPL_VAR NAME=LS_CNS_SNP DEFAULT=-></td>
 											<td><TMPL_VAR NAME=LS_CNS_INDEL DEFAULT=-></td>
+											<td><TMPL_VAR NAME=LS_CNS_LINEAGE DEFAULT=-></td>
 											<td class='ui-table-cell-hidden'><a href="<TMPL_VAR NAME=LS_CNS_LOG>" target="_new">LOG</a></td>
 											<td><TMPL_VAR NAME=LS_CNS_READY_TO_SUBMIT DEFAULT=-></td>
 										</tr>
