@@ -3,6 +3,7 @@
 ## build 202103
 * Lowered default threshold for detecting indels in amplicon-based ONT data to 0.6 (from 0.8)
 * Add swift primer trim option
+* Add Pangolin lineage assignment for consensus genome
 
 ## build 20210216
 * Add funding acknowledgement in about page
